<resources>
    <string name="app_name">Sensio Air</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id" translatable="false">993708130718989</string>
    <string name="Tag_Yes">Yes</string>
    <string name="Tag_No">No</string>
    <string name="Tag_Ok">OK</string>
    <string name="Tag_Retry">RETRY</string>
    <string name="Tag_Cancel">Cancelar</string>
    <string name="Tag_Submit">Enviar</string>
    <string name="Tag_SubmitCaps">Enviar</string>
    <string-array name="Gender">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="font_name_opensans">OpenSans</string>
    <string name="font_name_path_opensans">font/OpenSans-SemiboldItalic.ttf</string>
    <string name="title_terms">TERMS &amp; CONDITIONS</string>
    <string name="content_terms">Please read the followings terms before using your iOS device,. By using your iOS device, you are agreeeing to be bound by the OS terms and conditions.</string>
    <string name="button_accept">ACCEPT &amp; CONTINUE</string>
    <string name="button_continue">CONTINUE</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_new_account"><u>Create New Account</u></string>
    <string name="action_forgot_password"><u>Forgot Password</u></string>
    <string name="action_sign_in_short">GET STARTED!</string>
    <string name="description_login">Tells you what\'s in the \nair you breathe</string>
    <string name="description_otherlogin">Or Login with</string>
    <string name="description_license">I accept the terms and conditions</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="title_activity_signup">Create Account</string>
    <string name="title_create_account">CREATE ACCOUNT</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_phonenum">Phone Number</string>
    <string name="hint_countrycode">Code</string>
    <string name="hint_birthday">Date of birth</string>
    <string name="hint_gender">Gender</string>
    <string name="chb_male">Male</string>
    <string name="chb_female">Female</string>
    <string name="chb_geolocation">Allow geolocation</string>
    <string name="chb_subscribe">Subscribe to newsletter</string>
    <string name="btn_register">REGISTER</string>
    <string name="otherregister">Or Register with</string>
    <string name="title_activity_login_acitivity">Sign in</string>
    <string name="not_parsing">Response Error</string>
    <string name="msg_not_city">Outdoor Data for your city is not yet available</string>
    <string name="title_activity_health">Your Health</string>
    <string name="title_health">TELL US MORE ABOUT \nYOUR HEALTH</string>
    <string name="chb_conscious">I\'m just health conscious.</string>
    <string name="chb_allergies">I have allergies, asthma:</string>
    <string name="chb_eyes">Eyes</string>
    <string name="chb_nose">Nose</string>
    <string name="chb_lungs">Lungs</string>
    <string name="hint_specify">Please specify</string>
    <string name="chb_respiratory">I have another respiratory distress</string>
    <string name="chb_pet">I have a pet at home</string>
    <string name="btn_save_continue">SAVE &amp; CONTINUE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_home">Home</string>
    <string name="btn_statistics">Statistics</string>
    <string name="btn_preorder">Pre-order</string>
    <string name="btn_sensio">Sensio</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_settings">Settings</string>
    <string name="title_activity_sympton">SymptonActivity</string>
    <string name="item_menu_loading">Loading...</string>
    <string name="title_symptom">SELECT SYMPTOM</string>
    <string name="description_symptom">Press to modify the\nintensity of your symptom</string>
    <string name="btnSubmit">SUBMIT</string>
    <string name="title_settings">SETTINGS</string>
    <string name="description_settings">Set the sensitivity level\nfor your notifications:</string>
    <string name="btn_senddata">Send your data via Email</string>
    <string name="btn_savesettings">Save settings</string>
    <string name="title_message">Message</string>
    <string name="title_alert">Alert</string>
    <string name="title_notice">Notice</string>
    <string name="check_internet">Please check your internet settings!!!</string>
    <string name="try_again">Error, Please try again later</string>
    <string name="register_fail">Registration fail. Please Try Again</string>
    <string name="email_used">This Email has being used by another account</string>
    <string name="email_notprovided">Email Not Provided</string>
    <string name="incorrect_hash">Incorrect Hash</string>
    <string name="email_unable">Unable to Send Email</string>
    <string name="register_success">Register Success</string>
    <string name="user_suspended">Your account suspended. Please contact our team.</string>
    <string name="reset_password">You need to reset your password.</string>
    <string name="userid_not">UserID Not Provided</string>
    <string name="device_not">This ID of device is not provided.</string>
    <string name="http_error">HTTP Agent Provided or Not HTTPS</string>
    <string name="incorrect_pass">Incorrect Username or Password</string>
    <string name="not_found">Device not found</string>
    <string name="no_exist">This account does not exist.</string>
    <string name="not_save_setting">Your settings are not saved. Please try again after a moment.</string>
    <string name="no_saved_info">No Saved Info.</string>
    <string name="nothing_found">You saved info didn\'t find.</string>
    <string name="not_sendable">Unable to Send Email</string>
    <string name="email_noexist">Email Does not exist</string>
    <string name="input_email">Please input your correct Email</string>
    <string name="savingsetting_success">Saved your settings successfully.</string>
    <string name="senduserinfo_success">Your info was sent successfully.</string>
    <string name="forgotpass_msg_format">Forgot your password?\nEmail: %s</string>
    <string name="forgot_success">A new password has been sent to your email.</string>
    <string name="select_symptom">You have to select at least 1 symptom.</string>
    <string name="feedback_success">Thank You for Your Feedback.</string>
    <string name="msg_facebook_error">Facebook login Error</string>
    <string name="not_saved_info">Saving your information failed.</string>
    <string name="str_scanning">Scanning...</string>
    <string name="str_scann_qrcode">SCAN THE QR CODE ON\nTHE BACK OF THE DEVICE</string>
    <string name="str_nodevice">Don\'t have the device?</string>
    <string name="btn_sensio_now"><u>Pre-order it now!</u></string>
    <string name="title_profile">PROFILE</string>
    <string name="profile_item1">I\'m just health conscious</string>
    <string name="profile_item2">I have nose allergies</string>
    <string name="profile_item3">I don\'t respiratory distress</string>
    <string name="profile_item4">I have a pet at home</string>
    <string name="btn_editinfo">Edit info</string>
    <string name="btn_feedback">Give us your feedback</string>
    <string name="btn_logout">Log out</string>
    <string name="label_finddoctor">FINDE A DOCTOR\nNEAR YOU</string>
    <string name="btn_chemist">Register as a Chemist or Physician</string>
    <string name="title_feedback">GIVE US YOUR\nFEEDBACK</string>
    <string name="sub_title_particular">Particular Matter</string>
    <string name="content_particular">32 ppm/2.5</string>
    <string name="sub_title_humidity">Humidity</string>
    <string name="content_humidity">78%</string>
    <string name="sub_title_pollen">Pollen Count</string>
    <string name="content_pollen">28 ppm/L</string>
    <string name="sub_title_harmful">Harmful gasses</string>
    <string name="content_harmful">32 p/L</string>
    <string name="sub_title_temperature">Temperature</string>
    <string name="content_temperature">32 o C</string>
    <string name="sub_title_sunlight">Sunlight</string>
    <string name="content_sunlight">950 LX</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_close">CloseActivity</string>
    <string name="titleMessage">Sensio Air</string>
    <string name="tutorial_home_index">Welcome!\nSensio tells you about the environment in your city.</string>
    <string name="tutorial_home_press">Here you can log your allergies and respiratory symptoms.(Tap the red button)</string>
    <string name="tutorial_home_press_2">With our smart algorithms and board of doctors, Sensio gives you daily advices on how to deal with the outdoor pollution and improve the air at home.</string>
    <string name="tutorial_statisticss">Sensio helps you understand your symptoms by linking them to your environment.</string>
    <string name="tutorial_sensio_scanning">By scanning the QR Code on the back of the device, Sensio Air monitors the health of your home and tells you all about pollution, allergens, dust, mold and so much more.</string>
    <string name="tutorial_sensio">Want to know more about the Air at home? You can order Sensio Air Home Edition.</string>
    <string name="tutorial_sympotom">Here you can tap repetitevely to record your symtpom. (Try it!).</string>
    <string name="test_string">This is TEST String.<u>Pre-order</u> it <b>now</b>!</string>
</resources>