<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    tools:context="com.wondereight.airsensio.Activity.SignupActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="false"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingLeft="@dimen/_18sdp"
                android:paddingRight="@dimen/_18sdp"
                android:orientation="vertical">

                <com.wondereight.airsensio.CustomView.CustomFontTextView
                    android:text="@string/title_create_account"
                    style = "@style/TVTitleStyle"
                    app:textStyle="@integer/FS_light"
                    app:font="@string/font_name_opensans"/>

            </LinearLayout>

            <LinearLayout
                style="@style/vertical_space"
                android:layout_weight="1">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_gravity="bottom"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/etFirstName"
                        style="@style/EVInputCenterStyle"
                        android:hint="@string/hint_firstname"/>

                    <LinearLayout
                        style="@style/whiteLineLayout"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/etLastName"
                        style="@style/EVInputCenterStyle"
                        android:hint="@string/hint_lastname"/>

                    <LinearLayout
                        style="@style/whiteLineLayout"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/etBirthday"
                        style="@style/EVInputCenterStyle"
                        android:hint="@string/hint_birthday"/>

                    <LinearLayout
                        style="@style/whiteLineLayout"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/etGender"
                        style="@style/EVInputCenterStyle"
                        android:hint="@string/hint_gender"/>

                    <LinearLayout
                        style="@style/whiteLineLayout"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_50sdp">
                    <CheckBox
                        style="@style/chb_style1"
                        android:text="@string/chb_geolocation"
                        android:id="@+id/chbGelocation"
                        android:checked="true"/>
                    <CheckBox
                        style="@style/chb_style1"
                        android:layout_marginTop="5dp"
                        android:text="@string/chb_subscribe"
                        android:id="@+id/chbSubscribe"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/btn_register"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/btn_register" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_50sdp"
                    android:layout_marginRight="@dimen/_50sdp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/white"
                            android:layout_height="1dp"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>
                    <TextView
                        android:text="@string/otherregister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textStyle="italic"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/white"
                            android:layout_height="1dp"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_90sdp"
                    android:layout_marginRight="@dimen/_90sdp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:src="@drawable/ic_fb"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:src="@drawable/ic_in"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:src="@drawable/ic_tw"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/vertical_space"
                android:layout_weight="5">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>