<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_terms"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView android:text="@string/title_terms"
                style = "@style/TVTitleStyle" />
            <LinearLayout
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="outsideInset"
                    android:scrollbarSize="10dp"
                    android:scrollbarThumbVertical="@drawable/custom_scrollbar_style">
                    <TextView android:text="@string/content_terms"
                        style = "@style/TVContentStyle"/>
                </ScrollView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:background="@color/white">
            <TextView
                android:id="@+id/btnAcceptTerms"
                android:text="@string/button_accept"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/TermsButtonTextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@color/transparent"
                android:padding="10dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
